--- a/www/install.html
+++ b/www/install.html
@@ -40,33 +40,34 @@ We hope to see our package in Bioconductor eventually, so currently we keep the 
 
 <UL>
 
-<LI>First, install the <a href=http://bioconductor.org/packages/release/bioc/html/IRanges.html>IRanges</a> and <a href=http://www.bioconductor.org/packages/release/bioc/html/GenomicRanges.html>GenomicRanges</a> and <a href=http://www.bioconductor.org/packages/release/bioc/html/rtracklayer.html>rtracklayer</a> packages from <a href=http://www.bioconductor.org/>Bioconductor</a>.
+<LI>First, install the <a href=http://bioconductor.org/packages/release/bioc/html/IRanges.html>IRanges</a> and <a href=http://www.bioconductor.org/packages/release/bioc/html/GenomicRanges.html>GenomicRanges</a>, <a href=http://www.bioconductor.org/packages/release/bioc/html/rtracklayer.html>rtracklayer</a> and <a href=http://bioconductor.org/packages/release/data/annotation/html/TxDb.Hsapiens.UCSC.hg19.knownGene.html>TxDb.Hsapiens.UCSC.hg19.knownGene.html</a> packages from <a href=http://www.bioconductor.org/>Bioconductor</a>.
 <pre>source("http://bioconductor.org/biocLite.R")
 biocLite("IRanges")
 biocLite("GenomicRanges")
 biocLite("rtracklayer")
+biocLite("TxDb.Hsapiens.UCSC.hg19.knownGene")
 </pre>
 <p>
-<LI>
-Install gplots: 
+<LI>Install gplots: 
 <pre>install.packages("gplots")</pre> 
+or, 
 <pre>source("http://bioconductor.org/biocLite.R")
 biocLite("gplots")
 </pre>
-or, It is critical, intallation process can stuck otherwise.
+<LI>Install RCurl:
+<pre>install.packages("RCurl")</pre> 
+or, 
+<pre>source("http://bioconductor.org/biocLite.R")
+biocLite("RCurl")</pre>
+It is critical, intallation process can stuck otherwise.
 <p>
 <LI>To install the package itself, run this command in R:
 <pre>install.packages('GenometriCorr',repos='http://genometricorr.sourceforge.net/R/',type='source')</pre>
-<p>
-<LI>
-If you prefer GitHub, the following (experimental feature) will do the same:
+<LI>If you prefer GitHub, the following (experimental feature) will do the same:
 <pre>library(devtools)
 install_github('favorov/GenometriCorr')</pre>
-<p>
 <LI>Now, all the packages you need are installed in you R system. Each time you start a new R session going to use GenometriCorr , say:
 <pre>library('GenometriCorr')</pre>
-<p>
-
 <LI>Enjoy!
 </UL>
 </body>
