--- a/www/wizard/wizard.html
+++ b/www/wizard/wizard.html
@@ -46,7 +46,7 @@ When you have Tcl/Tk installed, just run the wizard from your R command window:
 <p>
 <tt>source('http://genometricorr.sourceforge.net/wizard/GenometriCorrWizard.R')</tt>
 </p>
-We put some example configureation files to <tt>exdata</tt> folder of the project package. To get to this directory with the wizard, say to R:
+We put some example configuration files to <tt>exdata</tt> folder of the project package. To get to this directory with the wizard, say to R:
 <p>
 <pre>library('GenometriCorr')
 setwd(paste(path.package('GenometriCorr'),"extdata",sep="/"))
