github installation is not experimental already

--- a/www/install.html
+++ b/www/install.html
@@ -63,7 +63,7 @@ It is critical, intallation process can stuck otherwise.
 <p>
 <LI>To install the package itself, run this command in R:
 <pre>install.packages('GenometriCorr',repos='http://genometricorr.sourceforge.net/R/',type='source')</pre>
-<LI>If you prefer GitHub, the following (experimental feature) will do the same:
+<LI>If you prefer GitHub, the following will do the same:
 <pre>library(devtools)
 install_github('favorov/GenometriCorr')</pre>
 <LI>Now, all the packages you need are installed in you R system. Each time you start a new R session going to use GenometriCorr , say:
