Update the www page, now index shows to github

--- a/www/install.html
+++ b/www/install.html
@@ -53,6 +53,8 @@ You can also install it in oldschool R manner:
 
 <pre>install.packages('GenometriCorr',repos='http://genometricorr.sourceforge.net/R/',type='source')</pre>
 
+or even <a href=./R/src/contrib/GenometriCorr_1.1.24.tar.gz>download</a> and install it locally from the package gz file.
+
 Enjoy!
 
 </body>
